Check if we have active frame data before returning the active index.

Encountered this when trying to get the active frame index in
SurfaceAggregator and HitTestManager in mash. This CL returns 0 as the
active frame index when there's no active frame data yet.

Bug: 780577
Test: viz_unittests
Change-Id: Ia81792e92507ca47a8db67fe502017f572c92443
Reviewed-on: https://chromium-review.googlesource.com/749643
Commit-Queue: Fady Samuel <fsamuel@chromium.org>
Reviewed-by: Fady Samuel <fsamuel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#513378}
Former-commit-id: 73ab384354cd969c9bee3509ba728a634e08abfe